--- a/package.json
+++ b/package.json
@@ -6,17 +6,26 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "seed": "ts-node prisma/seed"
   },
   "dependencies": {
-    "@types/node": "20.5.0",
+    "@prisma/client": "^5.1.1",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
+    "bcrypt": "^5.1.0",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.17",
     "next": "13.4.17",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "typescript": "5.1.6"
+    "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/node": "^20.5.0",
+    "prisma": "^5.1.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.1.6"
   }
 }
+
